--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-CFApiURL=
-CFAuthEmail=
-CFAuthKey=
+CFZoneID="" #CF Zone ID
+CFAuthKey="" # CF API Auth Key
 
 APIPort=9765
 APISecret="TestSecret"
