--- a/.env
+++ b/.env
@@ -1,6 +1,13 @@
-CFZoneID="" #CF Zone ID
-CFAuthKey="" # CF API Auth Key
+# Server
+APIPort=8889
 
-APIPort=9765
-APISecret="TestSecret"
-DomainSuffix=".hostingprovider.com"
+# Simple header auth (exact match; no "Bearer" etc.)
+APISecret=your_super_secret
+
+# Cloudflare
+CFZoneID=your_cloudflare_zone_id
+CFAuthKey=your_cloudflare_api_token
+
+# Domain suffix used when deleting (and should match the domain used for creation)
+# e.g. ".egopvp-hosting.com"
+DomainSuffix=.egopvp-hosting.com
