eh im even dumber

--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ CFAuthKey=your_cloudflare_api_token
 
 # Domain suffix used when deleting (and should match the domain used for creation)
 # e.g. ".egopvp-hosting.com"
-DomainSuffix=.egopvp-hosting.com
+DomainSuffix=.domain.com
